# magistracy-labs

./: .gitignore  README.md
algorithms/matrix-multiply/: CMakeLists.txt  helpme.cpp  main.cpp
algorithms/matrix-transponir/: CMakeLists.txt  HelpMe.h  helpme.cpp  main.cpp
big-data/hw3-skeleton/Task1/: .task1output1.tsv.crc  .task1output2.tsv.crc  pom.xml
big-data/hw3-skeleton/Task1/src/main/java/edu/gatech/cse6242/: Task1.java
big-data/hw3-skeleton/Task2/: .task2output1.tsv.crc  .task2output2.tsv.crc  pom.xml
big-data/hw3-skeleton/Task2/src/main/scala/edu/gatech/cse6242/: Task2.scala
parallel/lab1/: main.cpp
parallel/lab2/: CMakeLists.txt  main.cpp
parallel/lab3/: CMakeLists.txt  client.cpp  server.cpp
parallel/lab4/: CMakeLists.txt  exec.sh  main.c
parallel/lab5/: CMakeLists.txt  exec.sh  main.cpp
python/labs/: py-lab-1.py  py-lab-10.py  py-lab-16.py  py-lab-17.py  py-lab-19.py  py-lab-2.py  py-lab-20.py  py-lab-3.ipynb  py-lab-4.ipynb  py-lab-4.py  py-lab-5.py  py-lab-6.py  py-lab-7.py  py-lab-8.py
unix/: matryochka.sh
unix/100TB/: CMakeLists.txt  main.cpp
unix/2a/: lab-A5.sh
unix/2b/: lab-B2.sh
unix/hw5/: client.c  numbers.txt
unix/pipeline/: main.cpp
